--- a/ckanext/i18n/sk/LC_MESSAGES/ckanext_odn_cas.po
+++ b/ckanext/i18n/sk/LC_MESSAGES/ckanext_odn_cas.po
@@ -1,37 +1,37 @@
-# Slovak translations for ckanext-odn-cas.
+# Translations template for ckanext-odn-cas.
 # Copyright (C) 2015 ORGANIZATION
 # This file is distributed under the same license as the ckanext-odn-cas
 # project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2015.
-#
+# 
+# Translators:
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2015
 msgid ""
 msgstr ""
-"Project-Id-Version: ckanext-odn-cas 0.4.0\n"
+"Project-Id-Version: ckanext-odn-cas\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2015-06-12 14:06+0200\n"
-"PO-Revision-Date: 2015-06-12 11:56+0200\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: sk <LL@li.org>\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
+"POT-Creation-Date: 2015-10-30 13:07+0100\n"
+"PO-Revision-Date: 2015-10-30 14:18+0000\n"
+"Last-Translator: Sveto Krchnavy\n"
+"Language-Team: Slovak (http://www.transifex.com/opendatanode/ckanext-odn-cas/language/sk/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 0.9.6\n"
+"Language: sk\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
-#: ckanext/cas/plugin.py:25
+#: ckanext/cas/plugin.py:50
 msgid "Users cannot be created."
 msgstr "Používateľov nemožno vytvárať."
 
-#: ckanext/cas/plugin.py:30
+#: ckanext/cas/plugin.py:55
 msgid "Users cannot be edited."
 msgstr "Používateľov nemožno upravovať."
 
-#: ckanext/cas/plugin.py:36 ckanext/cas/plugin.py:42
+#: ckanext/cas/plugin.py:61 ckanext/cas/plugin.py:67
 msgid "Users cannot reset passwords."
 msgstr "Používateľ nemá povolenie resetovať heslo."
 
-#: ckanext/cas/plugin.py:346
+#: ckanext/cas/plugin.py:435
 msgid "You are not authorized to do this"
 msgstr "Nemáte povolenie na túto akciu."
-
